--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,14 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
+}
 
+.pointer {
+    color: blue;
+    font-size: 40px;
+    position: absolute;
+    font-weight: bold;;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
